Fixed a spacing issue

--- a/static/css/bsg.css
+++ b/static/css/bsg.css
@@ -136,8 +136,8 @@ img {
 	clear: both;
 }
 
-#side-b-ads {
-	padding-top: 15px;
+#side-b-ads img {
+	margin-top: 15px;
 
 }
 #social_media img {
